
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fitsSystemWindows="true"
        tools:context=".AddNewAp" >
        
        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="top" >

            <EditText
                android:id="@+id/editText1"
                android:layout_width="315dp"
                android:layout_height="76dp"
                android:ems="10"
                android:inputType="textMultiLine"
                android:text="@string/adesc" >

                <requestFocus />
            </EditText>

            <DatePicker
                android:id="@+id/setDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

<TableRow>
                    <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selectstime" />
                    
                    
        		<TextView
		    android:id="@+id/textView2"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/selectetime" />
    
</TableRow>
<TableRow>  
    
        		<TimePicker
    		    android:id="@+id/startTime"
    		    android:layout_width="wrap_content"
    		    android:layout_height="wrap_content" />
        		
    <TimePicker
                android:id="@+id/endTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 />
</TableRow>
		
<TableRow>

    <Spinner
        android:id="@+id/prioritysp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/prioritylist"
        android:prompt="@string/selectpri" />

    		<TextView
    		    android:id="@+id/textView7"
    		    android:layout_width="wrap_content"
    		    android:layout_height="wrap_content"
    		    android:layout_gravity="center_vertical"
    		    android:text="@string/selectpri" />
    
</TableRow>

				<TextView
		    android:id="@+id/textView3"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/setalarm"
		    android:layout_weight="1" />

			<ToggleButton
			    android:id="@+id/alarmtbtn"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/togglealarm" />
				
			<TextView
		    android:id="@+id/textView4"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/alarmtime"
		    android:layout_weight="1" />

			<Spinner
			    android:id="@+id/setalarmsp"
			    android:layout_width="match_parent"
			    android:layout_height="61dp"
			    android:entries="@array/alarmlist"
			    android:prompt="@string/alarmtime" />

						<TextView
		    android:id="@+id/textView5"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/rhead"
		    android:layout_weight="1" />

		<ToggleButton
		    android:id="@+id/repeattbtn"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/togglerepeat" />
				
			<TextView
		    android:id="@+id/textView6"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/repeattime"
		    android:layout_weight="1" />

			<Spinner
			    android:id="@+id/setrepeatsp"
			    android:layout_width="match_parent"
			    android:layout_height="52dp"
			    android:entries="@array/repeatlist"
			    android:prompt="@string/repeattime" />

	<TableRow>

		<Button
		    android:id="@+id/button1"
		    style="?android:attr/buttonStyleSmall"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/invitebt" />
		<TextView
			    android:id="@+id/textView8"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/invitep" />
		</TableRow>
		<Button
		    android:id="@+id/btnSave"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/btsave" />

</TableLayout>
    </ScrollView>
